klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/version/DuplicateVersionPropertyErrorTest.klass
package com.errors

class ExampleVersion systemTemporal
{
    id: Long key;
    // TODO: reject duplicate version properties
    number1: Integer version;
    number2: Integer version;
}
